# scam

./: .gitignore  index.html  pyproject.toml
Pages/About/: about.html
Pages/Account Settings/: accountInfo.html
Pages/Checkout/: checkout.html  checkout2.html  purchase.html
Pages/Forgot Password/: forgot-password.html
Pages/Home/: home.html
Pages/Login/: login.html
Pages/Password Reset/: password-reset.html
Pages/Products/: product.html  product2.html
Pages/Register/: register.html
scam-django/scam_clone_django/: manage.py
scam-django/scam_clone_django/scam_clone_django/: asgi.py  settings.py  urls.py  wsgi.py
scam-django/scam_clone_django/templates/: headerFooter.html  pagesBase.html  productBase.html
scam-django/scam_clone_django/templates/pages/: about.html  home.html
